# AcademicProjects

./: README.md
Case Based Travel Recommender/: Case Based Travel Recommender.py  Travel case base.txt  read.me
IUSurplus/: about.php  connection.php  contact.php  index.html  index.php  locate.php  login.php  messageReceived.php  session.php  signup.php  thankyou.php
IUSurplus/css/: style.css  style1.css
IUSurplus/productList/: addProduct.php  cancelReservation.php  dbInsert.php  deleteProduct.php  editForm.php  editProduct.php  messages.php  myReservations.php  productlist.php  reserve.php  reserveProduct.php  upload.php
Machine Learning Projects/: READ.ME
Machine Learning Projects/Bayesian Linear Regression/: ML-PP2-ReadMe.docx  Project Report.docx  ReadMe.docx  main.py  pp2-code.docx
Machine Learning Projects/Gaussian Processes/: PP4_README.docx  README.docx  main.py
Machine Learning Projects/Generalised Linear Model/: PP3-Code.docx  PP3_Readme.docx  Readme.docx  main.py
Machine Learning Projects/Naive Bayes Algo/: NAIVE BAYES IMPLEMENTATION CODE.docx  README.docx  main.py
Machine Learning Projects/Sentiment Analysis/: README.docx  main.py
RAGChatBot/: README.md  pyproject.toml
RAGChatBot/notebook/: RAGPipelines.ipynb  document.ipynb
